darker background on text screen for use with not blurred background